feat/New port project

--- a/about.html
+++ b/about.html
@@ -289,178 +289,7 @@
 	<script src="js/mail-script.js"></script>
 	<script src="js/scroll.js"></script>
 	<script src="js/main.js"></script>
-	<script>
-		var dictionary = {
-			'resume': {
-				'en': '<a href="CV_Renan_EN.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a>',
-				'pt-br': '<a  href="CV_Renan_BR.pdf" class="genric-btn primary-border circle" target="_blank">Curriculo</a>'
-			},
-			'i_am': {
-				'en': 'I am',
-				'pt-br': 'Eu sou'
-			},
-			'mini_intro': {
-				'en': 'Data scientist, lover of technology and RPA',
-				'pt-br': 'Cientista de dados, apaixonado por tecnologia e RPA'
-			},
-			'my_projects': {
-				'en': 'My Projects',
-				'pt-br': 'Meus Projetos'
-			},
-			'personal_details_title': {
-				'en': 'Personal Details',
-				'pt-br': 'Detalhes Pessoais'
-			},
-			'personal_details_content': {
-				'en': "Here's some more info obout me.",
-				'pt-br': 'Aqui está mais algumas informações sobre mim.'
-			},
-			'personal_details_first_p': {
-				'en': "I started in the programming world in 2016 because of a game called Runescape, I wanted to learn how to make my own server and play with friends. My steps in this world of programming were self taught, because I just saw it as fun, and it was like that until 2019 when I had the opportunity to participate in a research in the area of stellar astrophysics using Python in college. <br> <br> That was the moment I fell in love with data science",
-				'pt-br': 'Comecei no mundo da programação em 2016 por causa de um jogo chamado Runescape, eu queria aprender a fazer meu próprio servidor e jogar com amigos. Meus passos nesse mundo da programação foram autodidatas, porque eu só via como diversão, e foi assim até 2019 quando tive a oportunidade de participar de uma pesquisa na área de astrofísica estelar usando Python na faculdade. <br> <br> Foi nesse momento que me apaixonei pela ciência de dados'
-			},
-			'my_experience_title': {
-				'en': 'My Experience',
-				'pt-br': 'Minha Experiência'
-			},
-			'first_exp_title': {
-				'en': 'License in Physics',
-				'pt-br': 'Licenciatura em Física'
-			},
-			'first_exp_content': {
-				'en': 'Federal Institute of Education, Science and Tecnology - 2023',
-				'pt-br': 'Instituto Federal de Educação, Ciência e Tecnologia - 2023'
-			},
-			'second_exp_title': {
-				'en': 'Data Scientist Researcher Volunteer',
-				'pt-br': 'Cientista de Dados Voluntário'
-			},
-			'second_exp_first_content': {
-				'en': 'Astrophysics and Cosmology Laboratory - IFET',
-				'pt-br': 'Laboratório de Astrofísica e Cosmologia - IFCE'
-			},
-			'second_exp_second_content': {
-				'en': 'August 2019 - June 2022',
-				'pt-br': 'Agosto 2019 - Junho 2022'
-			},
-			'third_exp_title': {
-				'en': 'Bussiness Inteligence Developer Intern',
-				'pt-br': 'Estágio em Desenvolvimento de Business Inteligence'
-			},
-			'third_exp_first_content': {
-				'en': 'June 2022 - October 2022',
-				'pt-br': 'Junho 2022 - Outubro 2022'
-			},
-			'fourth_exp_title': {
-				'en': 'Bussiness Inteligence Developer Jr',
-				'pt-br': 'Desenvolvedor de Business Inteligence Jr'
-			},
-			'fourth_exp_first_content': {
-				'en': 'November 2022 - Present',
-				'pt-br': 'Novembro 2022 - Presente'
-			},
-			'any_questions': {
-				'en': 'Any Questions?',
-				'pt-br': 'Alguma Dúvida?'
-			},
-			'first_question_title': {
-				'en': 'How long have you been practicing Python?',
-				'pt-br': 'Há quanto tempo você pratica Python?'
-			},
-			'first_question_first_content': {
-				'en': 'I discovered Python in mid-2017, used it for games, however, 2019 is when I really started to get into it and look at it with different eyes',
-				'pt-br': 'Eu descobri o Python em meados de 2017, usei para jogos, no entanto, 2019 é quando realmente comecei a me aprofundar e olhar com outros olhos'
-			},
-			'first_question_second_content': {
-				'en': 'I have experience in building Visualization with Plotly or ApexCharts, treating data with Pandas, creating Python Packages and deploying them to PyPi',
-				'pt-br': 'Tenho experiência na construção de Visualização com Plotly ou ApexCharts, tratamento de dados com Pandas, criação de Pacotes Python e implantação no PyPi'
-			},
-			'second_question_title': {
-				'en': 'Do you have any experience working with databases?',
-				'pt-br': 'Você tem alguma experiência trabalhando com bancos de dados?'
-			},
-			'second_question_first_content': {
-				'en': 'At the start of my research, I had to learn how to use SQL to query the database and extract the data I needed. I also had to learn how to use MongoDB to store the data I was collecting.',
-				'pt-br': 'No início da minha pesquisa, tive que aprender a usar SQL para consultar o banco de dados e extrair os dados que eu precisava. Eu também tive que aprender a usar o MongoDB para armazenar os dados que eu estava coletando.'
-			},
-			'second_question_second_content': {
-				'en': 'In my present job, I use especially BigQuery and MySQL to query the data to create the dashboards and reports.',
-				'pt-br': 'No meu trabalho atual, eu uso principalmente o BigQuery e o MySQL para consultar os dados para criar os painéis e relatórios.'
-			},
-			'third_question_title': {
-				'en': 'What frameworks do you know and like?',
-				'pt-br': 'Quais frameworks você conhece e gosta?'
-			},
-			'third_question_first_content': {
-				'en': 'There are some frameworks that i like to use, such as:',
-				'pt-br': 'Existem alguns frameworks que gosto de usar, como:'
-			},
-			'third_question_second_content': {
-				'en': 'Flask, Django and BotCity in Python',
-				'pt-br': 'Flask, Django e BotCity em Python'
-			},
-			'third_question_third_content': {
-				'en': 'NodeJS in JavaScript',
-				'pt-br': 'NodeJS em JavaScript'
-			},
-			'about_me': {
-				'en': 'About Me',
-				'pt-br': 'Sobre Mim'
-			},
-			'portfolio': {
-				'en': 'Portfolio',
-				'pt-br': 'Portfólio'
-			},
-			'about_this_page': {
-				'en': 'About This Page',
-				'pt-br': 'Sobre Esta Página'
-			},
-			'first_about_this_page_content': {
-				'en': 'This website was coded in HTML, CSS, and Javascript based on CV from <a href="https://github.com/harrisonjansma/harrisonjansma.github.io" target="_blank">Harrison Jansma</a>',
-				'pt-br': 'Este site foi programado em HTML, CSS e Javascript com base no CV de <a href="https://github.com/harrisonjansma/harrisonjansma.github.io" target="_blank">Harrison Jansma</a>'
-			},
-			'second_about_this_page_content': {
-				'en': 'Copyright &copy; 2020 All rights reserved | This template is made with by <a href="https://colorlib.com" target="_blank">Colorlib</a>',
-				'pt-br': 'Copyright &copy; 2020 Todos os direitos reservados | Este modelo é feito com por <a href="https://colorlib.com" target="_blank">Colorlib</a>'
-			},
-			'follow_me': {
-				'en': 'Follow Me',
-				'pt-br': 'Siga-me'
-			},
-			'social_media': {
-				'en': 'Let\'s be social. ',
-				'pt-br': 'Vamos ser sociais.'
-			}
-		};
-		var langs = ['en', 'pt-br'];
-		var current_lang_index = 0;
-		var current_lang = langs[current_lang_index];
-
-		window.change_lang = function () {
-			current_lang_index = ++current_lang_index % 2;
-			current_lang = langs[current_lang_index];
-			translate();
-		}
-
-		function translate() {
-			$("[data-translate]").each(function () {
-				var key = $(this).data('translate');
-				$(this).html(dictionary[key][current_lang] || "N/A");
-				write_lang_in_html_with_p_tag();
-			});
-		}
-
-		function write_lang_in_html_with_p_tag() {
-			if (window.innerWidth < 768) {
-				$(".writeHereMobile").html("<img src='img/" + current_lang + ".png' alt='' width='50' height='50'>");
-			} else {
-				$("#writeHere").html("<img src='img/" + current_lang + ".png' alt='' width='30' height='30'>");
-			}
-		}
-		setInterval(write_lang_in_html_with_p_tag, 1000);
-
-		translate();
-	</script>
+	<script src="js/about.js"></script>
 </body>
 
 </html>
