--- a/index.html
+++ b/index.html
@@ -268,16 +268,38 @@
 						<div class="skill" data-width="60"></div>
 					</div>
 
-
 					<div class="single-skill">
 						<p>
 							ApexCharts.JS - 2
 						</p>
 						<div class="skill" data-width="40"></div>
 					</div>
-
 				</div>
 
+				<div class="col-lg-4 skill-right">
+					<h4 class="text-center pt-50"> Back-end</h4>
+
+					<div class="single-skill">
+						<p>
+							Flask - 3
+						</p>
+						<div class="skill" data-width="60"></div>
+					</div>
+
+					<div class="single-skill">
+						<p>
+							Django - 2
+						</p>
+						<div class="skill" data-width="40"></div>
+					</div>
+
+					<div class="single-skill">
+						<p>
+							Node.JS - 2
+						</p>
+						<div class="skill" data-width="40"></div>
+					</div>
+				</div>
 			</div>
 		</div>
 
@@ -301,6 +323,26 @@
 				</div>
 			</div>
 			<div class="row">
+				<div class="single-recent-blog col-lg-4 col-md-4">
+					<div class="thumb">
+						<a href="https://github.com/renancavalcantercb/Django_CRUD" target="_blank">
+							<img class="f-img img-fluid" src="img/django.png" alt=""
+								style="width:300px;height:294px;">
+						</a>
+					</div>
+					<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
+
+						<div data-translate="first_date" class="meta">
+							Dec 2, 2019
+						</div>
+					</div>
+					<a href="https://github.com/renancavalcantercb/Django_CRUD" target="_blank">
+						<h4 data-translate="first_lastest_project">A simple CRUD with Django</h4>
+					</a>
+					<p data-translate="first_lastest_project_content">
+						A simple CRUD with Django to create, read, update, and delete data from cars. Have register and login system too.
+					</p>
+				</div>
 
 				<div class="single-recent-blog col-lg-4 col-md-4">
 					<div class="thumb">
@@ -311,14 +353,14 @@
 					</div>
 					<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
 
-						<div data-translate="first_date" class="meta">
+						<div data-translate="second_date" class="meta">
 							Jan 20, 2020
 						</div>
 					</div>
 					<a href="https://github.com/renancavalcantercb/CryptoCurrency-API" target="_blank">
-						<h4 data-translate="first_lastest_project">A Crpyto Currency API</h4>
+						<h4 data-translate="second_lastest_project">A Crpyto Currency API</h4>
 					</a>
-					<p data-translate="first_lastest_project_content">
+					<p data-translate="second_lastest_project_content">
 						An API that allows you to get the current price of any cryptocurrency.
 					</p>
 				</div>
@@ -330,36 +372,15 @@
 						</a>
 					</div>
 					<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-						<div data-translate="second_date" class="meta">
+						<div data-translate="third_date" class="meta">
 							Dec 10, 2019
 						</div>
 					</div>
 					<a href="https://github.com/renancavalcantercb/termoPython" target="_blank">
-						<h4 data-translate="second_lastest_project">Wordle in Python</h4>
-					</a>
-					<p data-translate="second_lastest_project_content">
-						An implementation of the Wordle algorithm in Python.
-					</p>
-				</div>
-
-				<div class="single-recent-blog col-lg-4 col-md-4">
-					<div class="thumb">
-						<a href="https://github.com/renancavalcantercb/ResponsesTest" target="_blank">
-							<img class="f-img img-fluid" src="img/Selenium_Logo.png" alt=""
-								style="width:300px;height:294px;">
-						</a>
-					</div>
-					<div class="bottom d-flex justify-content-between align-items-center flex-wrap">
-
-						<div data-translate="third_date" class="meta">
-							Dec 2, 2019
-						</div>
-					</div>
-					<a href="https://github.com/renancavalcantercb/ResponsesTest" target="_blank">
-						<h4 data-translate="third_lastest_project">A response Test script with Selenium</h4>
+						<h4 data-translate="third_lastest_project">Wordle in Python</h4>
 					</a>
 					<p data-translate="third_lastest_project_content">
-						A selenium script that tests a dashboards response from Looqbox.
+						An implementation of the Wordle algorithm in Python.
 					</p>
 				</div>
 			</div>
@@ -432,194 +453,7 @@
 	<script src="js/mail-script.js"></script>
 	<script src="js/scroll.js"></script>
 	<script src="js/main.js"></script>
-	<script>
-		var dictionary = {
-			'resume': {
-				'en': '<a href="CV_Renan_EN.pdf" class="genric-btn primary-border circle" target="_blank">Resume</a>',
-				'pt-br': '<a  href="CV_Renan_BR.pdf" class="genric-btn primary-border circle" target="_blank">Curriculo</a>'
-			},
-			'portfolio': {
-				'en': 'Portfolio',
-				'pt-br': 'Portfólio'
-			},
-			'i_am': {
-				'en': 'I am',
-				'pt-br': 'Eu sou'
-			},
-			'mini_intro': {
-				'en': 'Data scientist, lover of technology and RPA',
-				'pt-br': 'Cientista de dados, apaixonado por tecnologia e RPA'
-			},
-			'my_projects': {
-				'en': 'My Projects',
-				'pt-br': 'Meus Projetos'
-			},
-			'personal_details_title': {
-				'en': 'Personal Details',
-				'pt-br': 'Detalhes Pessoais'
-			},
-			'first_personal_details': {
-				'en': 'I am a physics student. From an early age seeking to learn more every day. I taught astronomy classes for a year to teenagers in my college. I worked for two years as a scientific researcher in the field of Stellar Astrophysics.I love to play MMO games and create bots to automate game tasks.',
-				'pt-br': 'Sou estudante de física. Desde cedo buscando aprender mais a cada dia. Ensinei aulas de astronomia por um ano para adolescentes no meu colégio. Trabalhei por dois anos como pesquisador científico no campo da Astrofísica Estelar. Amo jogar jogos MMO e criar bots para automatizar tarefas do jogo.'
-			},
-			'second_personal_details': {
-				'en': 'I am currently a Bussiness Inteligence Jr developer at Looqbox. I work creating dashboards using Python, creating and executing queries on SQL (MySQL, Oracle and Big Query) and NoSQL (MongoDB) databases.',
-				'pt-br': 'Atualmente sou desenvolvedor Jr de Inteligência de Negócios na Looqbox. Trabalho criando dashboards usando Python, criando e executando consultas em bancos de dados SQL (MySQL, Oracle e Big Query) e NoSQL (MongoDB).'
-			},
-			'about_me': {
-				'en': 'About Me',
-				'pt-br': 'Sobre Mim'
-			},
-			'areas_of_interest_title': {
-				'en': 'Areas of Interest',
-				'pt-br': 'Áreas de Interesse'
-			},
-			'areas_of_interest_subtitle': {
-				'en': 'Take a look at some of the things I love working on.',
-				'pt-br': 'Dê uma olhada em algumas das coisas que amo trabalhar.'
-			},
-			'data_analytics': {
-				'en': 'I love create solution for business problems using concepts of statistics and data science.',
-				'pt-br': 'Eu amo criar soluções para problemas de negócios usando conceitos de estatística e ciência de dados.'
-			},
-			'data_visualization': {
-				'en': 'I really enjoy creating dashboards using Plotly and ApexCharts.',
-				'pt-br': 'Adoro criar dashboards usando Plotly e ApexCharts.'
-			},
-			'collaboration_title': {
-				'en': 'Collaboration',
-				'pt-br': 'Colaboração'
-			},
-			'collaboration_content': {
-				'en': 'I enjoy working with my team to create winning strategies.',
-				'pt-br': 'Adoro trabalhar com minha equipe para criar estratégias vencedoras.'
-			},
-			'back_end': {
-				'en': 'I love to create back-end solutions using Python and NodeJS.',
-				'pt-br': 'Adoro criar soluções back-end usando Python e NodeJS.'
-			},
-			'skills_expertise_title': {
-				'en': 'Skills Expertise',
-				'pt-br': 'Habilidades'
-			},
-			'basic': {
-				'en': 'Basic',
-				'pt-br': 'Básico'
-			},
-			'novice': {
-				'en': 'Novice',
-				'pt-br': 'Novato'
-			},
-			'intermediate': {
-				'en': 'Intermediate',
-				'pt-br': 'Intermediário'
-			},
-			'advanced': {
-				'en': 'Advanced',
-				'pt-br': 'Avançado'
-			},
-			'expert': {
-				'en': 'Expert',
-				'pt-br': 'Especialista'
-			},
-			'programming_languages': {
-				'en': 'Programming Languages',
-				'pt-br': 'Linguagens de Programação'
-			},
-			'my_lastest_projects_title': {
-				'en': 'My Latest Projects',
-				'pt-br': 'Meus Últimos Projetos'
-			},
-			'my_lastest_projects_content': {
-				'en': 'Take a look at my recent work.',
-				'pt-br': 'Dê uma olhada em meu trabalho recente.'
-			},
-			'first_date': {
-				'en': 'Oct 06, 2022',
-				'pt-br': '06 de Outubro de 2022'
-			},
-			'first_lastest_project': {
-				'en': 'A Crpyto Currency API',
-				'pt-br': 'Uma API de Criptomoedas'
-			},
-			'first_lastest_project_content': {
-				'en': 'An API that allows you to get the current price of any cryptocurrency.',
-				'pt-br': 'Uma API que permite que você obtenha o preço atual de qualquer criptomoeda.'
-			},
-			'second_date': {
-				'en': 'Nov 22, 2022',
-				'pt-br': '22 de Novembro de 2022'
-			},
-			'second_lastest_project': {
-				'en': 'Wordle in Python',
-				'pt-br': 'Termo em Python'
-			},
-			'second_lastest_project_content': {
-				'en': 'An implementation of the Wordle algorithm in Python.',
-				'pt-br': 'Uma implementação do algoritmo do Termo em Python.'
-			},
-			'third_date': {
-				'en': 'Oct 25, 2022',
-				'pt-br': '25 de Outubro de 2022'
-			},
-			'third_lastest_project': {
-				'en': 'A response Test script with Selenium',
-				'pt-br': 'Um script de teste de resposta com Selenium'
-			},
-			'third_lastest_project_content': {
-				'en': 'A selenium script that tests a dashboards response from Looqbox.',
-				'pt-br': 'Um script selenium que testa a resposta de um dashboard da Looqbox.'
-			},
-			'about_this_page': {
-				'en': 'About This Page',
-				'pt-br': 'Sobre Esta Página'
-			},
-			'first_about_this_page_content': {
-				'en': 'This website was coded in HTML, CSS, and Javascript based on CV from <a href="https://github.com/harrisonjansma/harrisonjansma.github.io" target="_blank">Harrison Jansma</a>',
-				'pt-br': 'Este site foi programado em HTML, CSS e Javascript com base no CV de <a href="https://github.com/harrisonjansma/harrisonjansma.github.io" target="_blank">Harrison Jansma</a>'
-			},
-			'second_about_this_page_content': {
-				'en': 'Copyright &copy; 2020 All rights reserved | This template is made with by <a href="https://colorlib.com" target="_blank">Colorlib</a>',
-				'pt-br': 'Copyright &copy; 2020 Todos os direitos reservados | Este modelo é feito com por <a href="https://colorlib.com" target="_blank">Colorlib</a>'
-			},
-			'follow_me': {
-				'en': 'Follow Me',
-				'pt-br': 'Siga-me'
-			},
-			'social_media': {
-				'en': 'Let\'s be social. ',
-				'pt-br': 'Vamos ser sociais.'
-			}
-		};
-		var langs = ['en', 'pt-br'];
-		var current_lang_index = 0;
-		var current_lang = langs[current_lang_index];
-
-		window.change_lang = function () {
-			current_lang_index = ++current_lang_index % 2;
-			current_lang = langs[current_lang_index];
-			translate();
-		}
-
-		function translate() {
-			$("[data-translate]").each(function () {
-				var key = $(this).data('translate');
-				$(this).html(dictionary[key][current_lang] || "N/A");
-				write_lang_in_html_with_p_tag();
-			});
-		}
-
-		function write_lang_in_html_with_p_tag() {
-			if (window.innerWidth < 768) {
-				$(".writeHereMobile").html("<img src='img/" + current_lang + ".png' alt='' width='50' height='50'>");
-			} else {
-				$("#writeHere").html("<img src='img/" + current_lang + ".png' alt='' width='30' height='30'>");
-			}
-		}
-		setInterval(write_lang_in_html_with_p_tag, 1000);
-
-		translate();
-	</script>
+	<script src="js/index.js"></script>
 </body>
 
 </html>
