--- a/index.html
+++ b/index.html
@@ -3,17 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Shell</title>
+    <meta name="description" content="Interactive portfolio of Renan Cavalcante - Python Developer and DevOps">
+    <meta name="keywords" content="portfolio, python, devops, developer, terminal">
+    <meta name="author" content="Renan Cavalcante">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://renancavalcantercb.github.io/">
+    <meta property="og:title" content="Terminal Portfolio - Renan Cavalcante">
+    <meta property="og:description" content="Interactive terminal-style portfolio">
+    <meta property="og:image" content="https://renancavalcantercb.github.io/preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://renancavalcantercb.github.io/">
+    <meta property="twitter:title" content="Terminal Portfolio - Renan Cavalcante">
+    <meta property="twitter:description" content="Interactive terminal-style portfolio">
+    <meta property="twitter:image" content="https://renancavalcantercb.github.io/preview.png">
+
+    <title>Terminal Portfolio - Renan Cavalcante</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="terminal">
-        <div id="output"></div>
+    <main id="terminal" role="main" aria-label="Portfolio terminal">
+        <div id="output" role="log" aria-live="polite"></div>
         <div class="input-line">
-            <span class="prompt">user@portfolio:~$</span>
-            <input type="text" id="input" autofocus>
+            <span class="prompt" aria-label="Terminal prompt">user@portfolio:~$</span>
+            <input type="text" id="input" autofocus aria-label="Command input" placeholder="Type a command...">
         </div>
-    </div>
+    </main>
     <script src="scripts.js"></script>
 </body>
 </html>
