--- a/index.html
+++ b/index.html
@@ -23,9 +23,15 @@
 
     <title>Terminal Portfolio - Renan Cavalcante</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="manifest" href="manifest.json">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500&display=swap" rel="stylesheet">
+    
+    <!-- PWA iOS support -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Terminal Portfolio">
 </head>
 <body>
     <main id="terminal" role="main" aria-label="Portfolio terminal">
